update api manakses dan add captcha
